@@ -1,6 +1,10 @@
 roxygen2 2.2.2.99 
 -----------------
 
+* The default usage definitions should be much better, generating the correct
+  usage for data sets (#122), S3 methods (without additional `@method` tag),
+  S4 methods, and for replacement (#119) and infix functions.
+
 * `@export` now identifies S3 methods and correct generates the correct 
   `S3method` NAMESPACE directive. This means that you should no longer need
    to use `@S3method`.
